--- a/WebMSSV/JS/js04.html
+++ b/WebMSSV/JS/js04.html
@@ -54,6 +54,9 @@
                 <td><input type="text" name="txtSo1"></td>
             </tr>
             <tr>
+                <td>Số thứ 2</td>
+                <td><input type="text" name="txtSo2"></td>
+            <tr>
                 <td>Chọn phép toán</td>
                 <td>
                     <p>
