--- a/WebMSSV/js04.html
+++ b/WebMSSV/js04.html
@@ -25,7 +25,7 @@
 <script>
     function Tinh(){
         var a = parseInt(document.forms["myform"]["txtSo1"].value);
-        var a = parseInt(document.forms["myform"]["txtSo2"].value);
+        var b = parseInt(document.forms["myform"]["txtSo2"].value);
         var op = document.forms["myform"]["op"].value;
         var kq;
         switch(op){
