--- a/WebMSSV/js08.html
+++ b/WebMSSV/js08.html
@@ -6,6 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>String Statistic</title>
 </head>
+    <script>
+    function Statistic()
+    {
+        var s = document.getElementById("txtS").value;
+        var arr = s.split(" ");
+        var i, words = 0;
+        var arrKq=[];
+        //mangchuaketqua
+        for(i=0; i < 128; i++)
+        arrKq[i]=0;
+        //demsotu
+        for(i=0; i< arr.length; i++)
+        {
+            if(arrp[i].trim() != "")
+            words++;
+        }
+
+        var kq="Characters: " + s.length + "<br>" + "Words: " + words + "<br>";
+        for(i = 0; i<s.length;i++)
+        {
+            if(s[i] >= 'a' && s[i] <= 'z')
+            arrKq[s.charCodeAt(i)-32] ++;
+    
+            else
+        arrKq[s.charCodeAt(i)] ++;
+        }
+
+        for(i=0; i< arrKq.length; i++)
+        {
+            if(arrKq[i]>0)
+                kq +="Character ' "+ String.fromCharCode(i) + " ':" 
+                + arrKq[i] + "<br>"
+        }
+        document.getElementById("kq").innerHTML = kq;
+    }
+</script>
 <body>
     <table>
         <caption><h3>String Statistic</h3></caption>
