--- a/WebMSSV/js09.html
+++ b/WebMSSV/js09.html
@@ -35,6 +35,21 @@
     </script>
 </head>
 <body>
-    
+    <label for ="sopt">Nhập số phần tử</label>
+    <input type="number" id ="sopt" value="10" size="10">
+    <br>
+    <button onclick="taoMang()">Tạo mảng</button>
+    <button onClick="mangTang()">Sắp xếp mảng tăng</button>
+    <button onClick="mangGiam()">Sắp xếp mảng giảm</button>
+    <br>
+    <label for ="txtArr1">Mảng ban đầu: </label>
+    <input type="text" id="txtArr1" size="50">
+    <br>
+    <label for ="txtArr2">Mảng tăng dầnu: </label>
+    <input type="text" id="txtArr2" size="50">
+    <br>
+    <label for ="txtArr3">Mảng giảm dần: </label>
+    <input type="text" id="txtArr3" size="50">
+    <br>
 </body>
 </html>
