--- a/WebMSSV/js08.html
+++ b/WebMSSV/js08.html
@@ -19,7 +19,7 @@
         //demsotu
         for(i=0; i< arr.length; i++)
         {
-            if(arrp[i].trim() != "")
+            if(arr[i].trim() != "")
             words++;
         }
 
