--- a/WebMSSV/js10.html
+++ b/WebMSSV/js10.html
@@ -28,6 +28,18 @@
     </script>
 </head>
 <body>
-    
+    <div id="divText">
+        <h1 id="'title">Welcome HTML</h1>
+    </div>
+    <p> Nhập nội dung:
+        <input type="text" id ="txtInput" autofocus value="Welcome HTML" size="50">
+    </p>
+    <p>
+        Màu nền: <input type="color" id="bkcolor" value="#ff0000">
+    </p>
+    <p>
+        Màu chữ: <input type="color" id="textcolor" value="#ffff00">
+    </p>
+    <input type="button" onClick="changeColor()" value="Thực hiện" >
 </body>
 </html>
