--- a/WebMSSV/js12.html
+++ b/WebMSSV/js12.html
@@ -29,6 +29,22 @@
             ctx.fill();
             ctx.strokeStyle="blue";
             ctx.stroke();
+            //polygon
+ctx.beginPath();
+ctx.moveTo(200, 0);
+ctx.lineTo(400,200);
+ctx.lineTo(200,400);
+ctx.lineTo(0,200);
+ctx.lineTo(200,0);
+ctx.fillStyle='Yellow';
+ctx.fill();
+ctx.strokeStyle ="#ff00ff";
+ctx.lineWidth = 3;
+ctx.stroke();
+ctx.font="50px Arial";
+ctx.lineWitdh=5;
+ctx.strokeStyle = "blue";
+ctx.strokeText("Html5", canvas.width/5, canvas.height/2+20);
         }
     </script>
     
