--- a/WebMSSV/js11.html
+++ b/WebMSSV/js11.html
@@ -20,9 +20,9 @@
     <h1>Image Resizing</h1>
     <hr />
     <p id="scale">Scale:
-        <input type="radio" name="scaler" value="small" onclick="setImgSize(this.value)">
-        <input type="radio" name="scaler" value="medium" onclick="setImgSize(this.value)">
-        <input type="radio" name="scaler" value="large" checked onclick="setImgSize(this.value)">
+        <input type="radio" name="scaler" value="small" onclick="setImgSize(this.value)">10%
+        <input type="radio" name="scaler" value="medium" onclick="setImgSize(this.value)">25%
+        <input type="radio" name="scaler" value="large" checked onclick="setImgSize(this.value)">50%
     </p>
     <img id="image" class="large" src="./anh cho/sigma.jpg">
 </body>
